# rusty-photon

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  .gitmodules  .rust-analyzer.json  .rustfmt.toml  BUILD.bazel  CI_LOCAL.md  Cargo.toml  LICENSE  LICENSE-APACHE  MODULE.bazel  README.md  default.kdl  run-ci.sh  rusty_photon.kdl  test-conformance.sh
.cargo-husky/hooks/: pre-commit
.claude/: settings.json
.claude/commands/: babysit-pr.md  pre-push.md
.config/: nextest.toml  rail.toml
.github/: CODEOWNERS  codecov.yml
.github/workflows/: bazel-coverage.yml  bazel.yml  build-binary.yml  check.yml  conformu.yml  fits-cfitsio-vcpkg-spike.yml  fitsio-pure-spike.yml  install-astap.yml  msi.yml  native.yml  nightly-packages.yml  parity.yml  pi-nightly.yml  plate-solver-smoke.yml  publish-readiness.yml  refresh-astap-shas.yml  release.yml  repin-bazel.yml  rp-plate-solver-smoke.yml  rust-ci.yml  safety.yml  scheduled.yml  test.yml  ui-browser-nightly.yml  validate-doctor-macos.yml
crates/bdd-infra/: BUILD.bazel  Cargo.toml
crates/bdd-infra/omnisim-config/ascom-alpaca-simulator/camera/v1/: instance-0.xml
crates/bdd-infra/omnisim-config/ascom-alpaca-simulator/covercalibrator/v1/: instance-0.xml
crates/bdd-infra/omnisim-config/ascom/alpaca/ascom-alpaca-simulator/covercalibrator/v1/: instance-0.xml
crates/bdd-infra/src/: conformu.rs  doctor_smoke.rs  lib.rs  sharding.rs  sky_survey_camera_harness.rs  tls_auth.rs
crates/bdd-infra/src/rp_harness/: computed_sky.rs  config.rs  guider_stub.rs  launcher.rs  mcp_client.rs  mod.rs  night_sky.rs  omnisim.rs  orchestrator.rs  plate_solver_stub.rs  sse.rs  webhook.rs
crates/bdd-infra/tests/: server_pool.rs  service_handle.rs
crates/fits-cfitsio-spike/: Cargo.toml
crates/fits-cfitsio-spike/src/: lib.rs
crates/fits-cfitsio-spike/tests/: spike.rs
crates/fitsio-pure-spike/: Cargo.toml
crates/fitsio-pure-spike/src/: lib.rs
crates/fitsio-pure-spike/tests/: spike.rs
crates/qhyccd-rs/: BUILD.bazel  CHANGELOG.md  Cargo.toml  README.md  RELEASING.md
crates/qhyccd-rs/docs/: AGENTS.md  qhyccd-rs.md
crates/qhyccd-rs/examples/: SingleFrameMode.rs
crates/qhyccd-rs/libqhyccd-sys/: BUILD.bazel  Cargo.toml  build.rs  lib.rs
crates/qhyccd-rs/src/: backend.rs  error.rs  filter_wheel.rs  lib.rs  mocks.rs  sdk.rs  types.rs
crates/qhyccd-rs/src/camera/: configuration.rs  imaging.rs  info.rs  lifecycle.rs  mod.rs  parameters.rs  readout_modes.rs
crates/qhyccd-rs/src/simulation/: config.rs  image_generator.rs  mod.rs  state.rs  test_state.rs
crates/qhyccd-rs/src/tests/: camera_tests.rs  filter_wheel_tests.rs  mod.rs  sdk_tests.rs
crates/rp-auth/: BUILD.bazel  Cargo.toml
crates/rp-auth/src/: config.rs  credentials.rs  error.rs  lib.rs  middleware.rs
crates/rp-catalog/: BUILD.bazel  Cargo.toml
crates/rp-catalog/scripts/: openngc_to_catalog.py
crates/rp-catalog/src/: lib.rs
crates/rp-catalog/src/data/: LICENSE-DATA  aliases.csv  ic.csv  messier.csv  ngc.csv
crates/rp-ephemeris/: BUILD.bazel  Cargo.toml
crates/rp-ephemeris/refvals/: README.md  gen.py
crates/rp-ephemeris/src/: derived.rs  erfars_impl.rs  lib.rs  site.rs  types.rs  vocabulary.rs
crates/rp-ephemeris/tests/: reference_values.rs
crates/rp-fits/: BUILD.bazel  Cargo.toml
crates/rp-fits/src/: atomic.rs  error.rs  lib.rs  reader.rs  writer.rs
crates/rp-guider/: BUILD.bazel  Cargo.toml
crates/rp-i18n/: BUILD.bazel  Cargo.toml
crates/rp-i18n-derive/: BUILD.bazel  Cargo.toml
crates/rp-i18n-derive/src/: lib.rs
crates/rp-i18n/src/: lib.rs  verify.rs
crates/rp-mcp-client/: BUILD.bazel  Cargo.toml
crates/rp-mcp-client/src/: lib.rs
crates/rp-plate-solver/: BUILD.bazel  Cargo.toml
crates/rp-plate-solver/src/: lib.rs
crates/rp-targets/: BUILD.bazel  Cargo.toml
crates/rp-targets/src/: error.rs  lib.rs  memory.rs  migrate.rs  model.rs  redb_store.rs
crates/rp-tls/: BUILD.bazel  Cargo.toml
crates/rp-tls/src/: acme.rs  acme_config.rs  cert.rs  client.rs  config.rs  dns.rs  error.rs  lib.rs  permissions.rs  server.rs
crates/rp-tls/tests/: tls_roundtrip.rs
crates/rp-vocabulary/: BUILD.bazel  Cargo.toml
crates/rusty-photon-config/: BUILD.bazel  Cargo.toml
crates/rusty-photon-doctor-checks/: BUILD.bazel  Cargo.toml
crates/rusty-photon-driver/: BUILD.bazel  Cargo.toml
crates/rusty-photon-i18n/: BUILD.bazel  Cargo.toml
crates/rusty-photon-i18n-derive/: BUILD.bazel  Cargo.toml
crates/rusty-photon-server-config/: BUILD.bazel  (+1 more)
docs/: AGENTS.md  ascom-alpaca.md  packaging-macos.md  packaging-windows.md  packaging.md  pre-push-checklist.md  testing-rules.md  workspace.md
filemonitor/: Cargo.toml
filemonitor/examples/: README.md  config-linux.json  config-macos.json
filemonitor/src/: async_concurrency_tests.rs  lib.rs  main.rs  property_tests.rs
filemonitor/tests/: README.md  RoofStatusFile.txt  config.json  conformu_integration.rs  integration_test.rs  invalid_config.json  test_async_concurrency.rs  test_cli.rs  test_integration.rs  test_property.rs  test_unit.rs
firmware/: .gitignore  Cargo.toml  README.md
firmware/spikes/usb-cdc-hello/: Cargo.toml  README.md  idf_component.yml  sdkconfig.defaults
firmware/spikes/usb-cdc-hello/.cargo/: config.toml
firmware/spikes/usb-cdc-hello/components/cdc_acm_pull/: CMakeLists.txt  bindings.h  idf_component.yml
firmware/spikes/usb-cdc-hello/src/: main.rs
installer/: License.rtf  Package.wxs  README.md  seed-ui-htmx-config.ps1
packaging/: README.md  postinst.udev-stanza  postrm.common
scripts/: astap-spike.sh  build-apt-repo.sh  build-msi.ps1  build-packages.sh  build-tarballs.sh  build-yum-repo.sh  check-bazel-cargo-parity.sh  check-pkg-assets.sh  generate-brew-formulas.sh  push-packages-repo.sh  resolve-workspace-deps.sh  rig.sh  run-ci.sh  setup-ci.sh  setup-pi-runner.sh  test-conformance.sh  verify-brew.sh  verify-msi.ps1  verify-packages-repo.sh  verify-packages.sh  verify-publishable-crate.sh
server/: Cargo.toml
server/src/: action.rs  main.rs  target.rs
src/: fits.rs  main.rs
ui/: Cargo.toml  index.html
ui/src/: app.rs  index.html  main.rs  style.css
(+1525 files in other folders)
