# Top-level package.
# Exports Cargo.toml and Cargo.lock so crate_universe can read them from
# MODULE.bazel.

load("@buildifier_prebuilt//:rules.bzl", "buildifier", "buildifier_test")

exports_files(
    [
        "Cargo.toml",
        "Cargo.lock",
    ],
    visibility = ["//visibility:public"],
)

# `bazel run //:buildifier` formats every BUILD / *.bzl / MODULE.bazel file in the
# workspace in place. Pinned via MODULE.bazel (buildifier_prebuilt) so every dev
# machine and CI run the identical formatter with no system install.
buildifier(
    name = "buildifier",
    mode = "fix",
)

# `bazel test //:buildifier_check` fails if any BUILD / *.bzl file is unformatted.
# Runs non-sandboxed over the real tree (rooted at MODULE.bazel) so it covers every
# package, not just this one. Wire into the Bazel shadow CI as the format gate.
buildifier_test(
    name = "buildifier_check",
    lint_mode = "warn",
    mode = "diff",
    no_sandbox = True,
    tags = ["no-sandbox"],
    verbose = True,
    workspace = "//:MODULE.bazel",
)
