[workspace]
members = [
  "crates/bdd-infra",
  "crates/rp-auth",
  "crates/rp-tls",
  "services/filemonitor",
  "services/phd2-guider",
  "services/ppba-driver",
  "services/qhy-focuser",
  "services/calibrator-flats",
  "services/rp",
  "services/sentinel",
  "services/sentinel-app",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Igor von Nyssen <igor@vonnyssen.com>"]
license = "MIT OR Apache-2.0"
rust-version = "1.94.1"
repository = "https://github.com/ivonnyssen/rusty_photon"
description = "Rusty Photon - An astrophotography application"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[workspace.dependencies]
bdd-infra = { path = "crates/bdd-infra" }
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
clap = { version = "4.6.0", features = ["derive"] }
libc = "0.2"
regex = "1.12.3"
async-trait = "0.1.89"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tokio-test = "0.4.5"
proptest = "1.11.0"
fitrs = "0.5.0"
ndarray = "0.17"
thiserror = "2.0.18"
base64 = "0.22.1"
mockall = "0.14.0"
tokio-serial = "5.4.5"
ascom-alpaca = { git = "https://github.com/ivonnyssen/ascom-alpaca-rs.git", branch = "feature/client-custom-reqwest", default-features = false }
axum = "0.8"
reqwest = { version = "0.13.2", features = ["form", "json"] }
rp-auth = { path = "crates/rp-auth" }
rp-tls = { path = "crates/rp-tls" }
argon2 = { version = "0.5", features = ["std"] }
rpassword = "7"
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
instant-acme = { version = "0.8", features = ["hyper-rustls", "rcgen"] }
cloudflare = "0.14"
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
socket2 = "0.6"
cucumber = "0.22.1"
tempfile = "3.27.0"
cargo-husky = { version = "1", default-features = false, features = [
  "precommit-hook",
  "user-hooks",
] }

[[workspace.metadata.leptos]]
name = "sentinel-dashboard"
bin-package = "sentinel"
lib-package = "sentinel-app"
site-root = "target/site"
site-pkg-dir = "pkg"
site-addr = "127.0.0.1:11114"
reload-port = 11115
