[workspace]
members = [
  "crates/bdd-infra",
  "crates/rp-auth",
  "crates/rp-catalog",
  "crates/rp-ephemeris",
  "crates/rp-fits",
  "crates/rp-plate-solver",
  "crates/rp-tls",
  "crates/rusty-photon-i18n",
  "crates/rusty-photon-i18n-derive",
  "crates/rusty-photon-shared-transport",
  "crates/skywatcher-motor-protocol",
  "services/filemonitor",
  "services/pa-falcon-rotator",
  "services/phd2-guider",
  "services/ppba-driver",
  "services/qhy-focuser",
  "services/calibrator-flats",
  "services/rp",
  "services/plate-solver",
  "services/sentinel",
  "services/sentinel-app",
  "services/sky-survey-camera",
  "services/star-adventurer-gti",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Igor von Nyssen <igor@vonnyssen.com>"]
license = "MIT OR Apache-2.0"
rust-version = "1.94.1"
repository = "https://github.com/ivonnyssen/rusty_photon"
description = "Rusty Photon - An astrophotography application"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[workspace.dependencies]
bdd-infra = { path = "crates/bdd-infra" }
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
humantime = "2.3.0"
humantime-serde = "1.1.1"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
clap = { version = "4.6.0", features = ["derive"] }
libc = "0.2"
regex = "1.12.3"
async-trait = "0.1.89"
derive_more = { version = "2.0", features = ["debug"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tokio-test = "0.4.5"
proptest = "1.11.0"
fitsrs = "0.4"
wcs = "0.4"
ndarray = "0.17"
ndarray-ndimage = "0.6.0"
rmpfit = "1.0"
thiserror = "2.0.18"
base64 = "0.22.1"
mockall = "0.14.0"
tokio-serial = "5.4.5"
ascom-alpaca = { git = "https://github.com/ivonnyssen/ascom-alpaca-rs.git", branch = "integration", default-features = false }
axum = "0.8"
reqwest = { version = "0.13.3", features = ["form", "json"] }
rp-auth = { path = "crates/rp-auth" }
rp-catalog = { path = "crates/rp-catalog" }
rp-ephemeris = { path = "crates/rp-ephemeris" }
rp-fits = { path = "crates/rp-fits" }
rp-plate-solver = { path = "crates/rp-plate-solver" }
rp-tls = { path = "crates/rp-tls" }
skywatcher-motor-protocol = { path = "crates/skywatcher-motor-protocol" }
erfars = "0.2"
tzf-rs = "1"
csv = "1"
argon2 = { version = "0.5", features = ["std"] }
rpassword = "7"
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
instant-acme = { version = "0.8", features = ["hyper-rustls", "rcgen"] }
cloudflare = { version = "0.14", default-features = false, features = ["rustls-tls"] }
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
socket2 = "0.6"
cucumber = "0.23.0"
tempfile = "3.27.0"
rmcp = { version = "1.7", default-features = false }
schemars = "1.0"
cargo-husky = { version = "1", default-features = false, features = [
  "precommit-hook",
  "user-hooks",
] }
rusty-photon-i18n = { path = "crates/rusty-photon-i18n" }
rusty-photon-i18n-derive = { path = "crates/rusty-photon-i18n-derive" }
rusty-photon-shared-transport = { path = "crates/rusty-photon-shared-transport" }
i18n-embed = { version = "0.16", features = ["fluent-system"] }
i18n-embed-fl = "0.10"
fluent-syntax = "0.12"
# `debug-embed` makes RustEmbed always bake the asset tree into the binary,
# even when `cfg(debug_assertions)` is on. Without it, dev/fastbuild builds
# read the asset directory from disk at runtime — fine under Cargo (the path
# stays the source tree) but broken under Bazel, whose CARGO_MANIFEST_DIR is
# a sandbox path that does not exist at runtime. We always want translations
# embedded, never lazy-loaded.
rust-embed = { version = "8", features = ["debug-embed"] }
# Pinned to 0.13 until the rest of the Fluent stack moves off `unic-langid`.
# 0.14.0 swapped `LanguageIdentifier` from `unic-langid` to `icu-locid`, but
# `i18n-embed` 0.16, `i18n-embed-fl` 0.10, and `fluent-bundle` 0.16 still
# require `fluent-langneg ^0.13` + `unic-langid ^0.9` on their public APIs.
# Bumping here would either duplicate `fluent-langneg` in the graph or force
# string-roundtrip conversions at every `negotiate_languages` call site.
# Revisit when https://github.com/kellpossible/cargo-i18n ships a release
# that requires `fluent-langneg ^0.14`.
fluent-langneg = "0.13"
sys-locale = "0.3"
unic-langid = "0.9"
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[[workspace.metadata.leptos]]
name = "sentinel-dashboard"
bin-package = "sentinel"
lib-package = "sentinel-app"
site-root = "target/site"
site-pkg-dir = "pkg"
site-addr = "127.0.0.1:11114"
reload-port = 11115

# Trim debug info to keep `target/` small and link fast. Workspace code keeps
# line tables so panic backtraces still resolve to file:line; deps get nothing
# (we don't step into tokio/serde). Override per-build with
# `RUSTFLAGS="-C debuginfo=2" cargo build` if you need full debug info.
[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false
