[workspace]
members = [
  "crates/bdd-infra",
  "crates/qhyccd-rs",
  "crates/qhyccd-rs/libqhyccd-sys",
  "crates/rp-auth",
  "crates/rp-catalog",
  "crates/rp-ephemeris",
  "crates/rp-fits",
  "crates/rp-guider",
  "crates/rp-mcp-client",
  "crates/rp-plate-solver",
  "crates/rusty-photon-tls",
  "crates/rusty-photon-config",
  "crates/rusty-photon-doctor-checks",
  "crates/rusty-photon-driver",
  "crates/rusty-photon-i18n",
  "crates/rusty-photon-i18n-derive",
  "crates/rusty-photon-server-config",
  "crates/rusty-photon-service-lifecycle",
  "crates/rusty-photon-shared-transport",
  "crates/skywatcher-motor-protocol",
  "services/filemonitor",
  "services/pa-falcon-rotator",
  "services/pa-scops-oag",
  "services/phd2-guider",
  "services/ppba-driver",
  "services/qhy-camera",
  "services/qhy-focuser",
  "services/calibrator-flats",
  "services/doctor",
  "services/dsd-fp2",
  "services/rp",
  "services/plate-solver",
  "services/sentinel",
  "services/session-runner",
  "services/sky-survey-camera",
  "services/star-adventurer-gti",
  "services/ui-htmx",
  "services/zwo-camera",
  "services/zwo-focuser",
  # First-party, dual-homed ZWO FFI crates — vendored from ivonnyssen/zwo-rs
  # (ADR-010 / docs/plans/vendor-zwo-rs.md). libzwo-sys is nested under zwo-rs to
  # preserve its upstream `path = "libzwo-sys"` dep verbatim.
  "crates/zwo-rs",
  "crates/zwo-rs/libzwo-sys",
  # End-to-end harness (tests only): real rp + real sentinel exercising the
  # operation watchdog + corrective ladder. See docs/services/sentinel.md.
  "tests/operation-watchdog-e2e",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Igor von Nyssen <igor@vonnyssen.com>"]
license = "MIT OR Apache-2.0"
rust-version = "1.94.1"
repository = "https://github.com/ivonnyssen/rusty_photon"
description = "Rusty Photon - An astrophotography application"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

# Panic-free production code: deny the three most common ways to panic from
# otherwise-recoverable situations. Tests are expected to use `.unwrap()` per
# docs/skills/testing.md, so they opt back in *scoped to the test code only*:
#   - Inline `#[cfg(test)] mod tests { ... }` in `src/`: add
#     `#[allow(clippy::unwrap_used, clippy::expect_used, clippy::unreachable)]`
#     as an attribute on the `mod` item itself (not at the crate root, so the
#     allow never leaks into the production-cfg compile of `src/`).
#   - Top-level integration test entry files under `tests/`: add
#     `#![allow(clippy::unwrap_used, clippy::expect_used, clippy::unreachable)]`
#     at the top. BDD submodules pulled in via `#[path] mod` inherit it.
[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
unreachable = "deny"

[workspace.dependencies]
bdd-infra = { path = "crates/bdd-infra" }
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7"
async-stream = "0.3"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
humantime = "2.3.0"
humantime-serde = "1.1.1"
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
clap = { version = "4.6.0", features = ["derive"] }
libc = "0.2"
regex = "1.12.4"
directories = "6"
async-trait = "0.1.89"
# Floor is 2.1, not 2.0: qhyccd-rs uses the `eq` derive feature, added in 2.1.0
# (absent in 2.0.0/2.0.1). A looser "2.0" breaks the dual-homed crate's
# direct-minimal-versions build (caught by the publish-readiness check).
derive_more = { version = "2.1", features = ["debug"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tokio-test = "0.4.5"
proptest = "1.11.0"
fitsrs = "0.4"
wcs = "0.4"
ndarray = "0.17"
ndarray-ndimage = "0.6.0"
rmpfit = "1.0"
thiserror = "2.0.19"
base64 = "0.22.1"
mockall = "0.15.0"
parking_lot = "0.12.5"
tokio-serial = "5.4.5"
# Simulation-backend deps shared by the two vendored, dual-homed camera crates
# (`zwo-rs` + `qhyccd-rs`), each behind its own `simulation` feature. Pinned once
# here so the shared version can't drift (Rule 10); the `optional` flag stays
# crate-local. `cargo publish` flattens the inherited version into a concrete one,
# so dual-home standalone releases are unaffected.
# Floor is 0.10.1, not 0.10: rand 0.10.0's feature table references `rand/getrandom`
# as a `dep:`-only dependency (no implicit feature), so a direct-minimal-versions
# build of the dual-homed sim crates fails to resolve it (fixed in 0.10.1; caught
# by the publish-readiness check).
rand = "0.10.1"
rayon = "1.10"
# QHYCCD camera SDK FFI. Vendored first-party at `crates/qhyccd-rs` (with its
# `libqhyccd-sys` sub-crate nested inside) per ADR-009 — the crate is authored by
# us, so we develop it in-tree and dual-home it to crates.io. `libqhyccd-sys`
# (transitively) links the proprietary static `qhyccd` lib + `libusb-1.0` — see
# `docs/services/qhy-camera.md` "Native dependency & build gating". Only
# `qhy-camera` depends on it today; declared at workspace level so the
# native-link policy rationale lives in one place.
qhyccd-rs = { path = "crates/qhyccd-rs" }
ascom-alpaca = { git = "https://github.com/ivonnyssen/ascom-alpaca-rs.git", branch = "pr/integer-parameter-handling", default-features = false }
# ZWO ASI camera + EFW filter-wheel + EAF focuser FFI (safe wrapper over
# `libzwo-sys`), for the `zwo-camera` and `zwo-focuser` services. Vendored
# first-party + dual-homed at crates/zwo-rs (ADR-010 /
# docs/plans/vendor-zwo-rs.md) — the monorepo is now the canonical development
# home; edits are in-tree (no git-rev bump). Still published to crates.io from
# the vendored subdir for outside consumers.
# default-features = false: the device SDKs link per feature (ADR-014), and
# each service enables only its own device (`camera` / `focuser`) so its binary
# links — and its package ships — only the SDK blob it talks to.
zwo-rs = { path = "crates/zwo-rs", default-features = false }
axum = "0.8"
tower = "0.5"
reqwest = { version = "0.13.4", features = ["form", "json"] }
rp-auth = { path = "crates/rp-auth" }
rp-mcp-client = { path = "crates/rp-mcp-client" }
rp-catalog = { path = "crates/rp-catalog" }
rp-ephemeris = { path = "crates/rp-ephemeris" }
rp-fits = { path = "crates/rp-fits" }
rp-guider = { path = "crates/rp-guider" }
rp-plate-solver = { path = "crates/rp-plate-solver" }
rusty-photon-tls = { path = "crates/rusty-photon-tls" }
skywatcher-motor-protocol = { path = "crates/skywatcher-motor-protocol" }
erfars = "0.2"
tzf-rs = "1"
csv = "1"
argon2 = { version = "0.5", features = ["std"] }
rpassword = "7"
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
instant-acme = { version = "0.8", features = ["hyper-rustls", "rcgen"] }
cloudflare = { version = "0.14", default-features = false, features = ["rustls-tls"] }
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
socket2 = "0.6"
cucumber = "0.23.0"
tempfile = "3.27.0"
uuid = { version = "1", features = ["v4", "serde"] }
rmcp = { version = "2.0", default-features = false }
schemars = "1.0"
cargo-husky = { version = "1", default-features = false, features = [
  "precommit-hook",
  "user-hooks",
] }
rusty-photon-i18n = { path = "crates/rusty-photon-i18n" }
rusty-photon-i18n-derive = { path = "crates/rusty-photon-i18n-derive" }
rusty-photon-config = { path = "crates/rusty-photon-config" }
rusty-photon-doctor-checks = { path = "crates/rusty-photon-doctor-checks" }
rusty-photon-driver = { path = "crates/rusty-photon-driver" }
rusty-photon-server-config = { path = "crates/rusty-photon-server-config" }
rusty-photon-service-lifecycle = { path = "crates/rusty-photon-service-lifecycle" }
rusty-photon-shared-transport = { path = "crates/rusty-photon-shared-transport" }
i18n-embed = { version = "0.16", features = ["fluent-system"] }
i18n-embed-fl = "0.10"
fluent-syntax = "0.12"
# `debug-embed` makes RustEmbed always bake the asset tree into the binary,
# even when `cfg(debug_assertions)` is on. Without it, dev/fastbuild builds
# read the asset directory from disk at runtime — fine under Cargo (the path
# stays the source tree) but broken under Bazel, whose CARGO_MANIFEST_DIR is
# a sandbox path that does not exist at runtime. We always want translations
# embedded, never lazy-loaded.
rust-embed = { version = "8", features = ["debug-embed"] }
# Pinned to 0.13 until the rest of the Fluent stack moves off `unic-langid`.
# 0.14.0 swapped `LanguageIdentifier` from `unic-langid` to `icu-locid`, but
# `i18n-embed` 0.16, `i18n-embed-fl` 0.10, and `fluent-bundle` 0.16 still
# require `fluent-langneg ^0.13` + `unic-langid ^0.9` on their public APIs.
# Bumping here would either duplicate `fluent-langneg` in the graph or force
# string-roundtrip conversions at every `negotiate_languages` call site.
# Revisit when https://github.com/kellpossible/cargo-i18n ships a release
# that requires `fluent-langneg ^0.14`.
fluent-langneg = "0.13"
sys-locale = "0.3"
unic-langid = { version = "0.9", features = ["macros"] }
syn = { version = "3.0.1", features = ["full"] }
quote = "1.0.47"
proc-macro2 = "1"

# Trim debug info to keep `target/` small and link fast. Workspace code keeps
# line tables so panic backtraces still resolve to file:line; deps get nothing
# (we don't step into tokio/serde). Override per-build with
# `RUSTFLAGS="-C debuginfo=2" cargo build` if you need full debug info.
[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false
