"""rusty-photon Bazel module.

Cargo.toml remains the canonical source of dependency versions.
crate_universe reads Cargo.toml + Cargo.lock to materialize an @cr repo
that Bazel targets reference via @cr//:<name>.  The short repo name ("cr"
instead of "crates") is intentional: rules_rust embeds the repo name twice
in every build-script runfiles path, and aws-lc-sys's deeply nested vendored
source tree hits the Windows MAX_PATH (260) limit with longer names.

Adding a dep: edit the relevant Cargo.toml, run `cargo update` if needed,
then `CARGO_BAZEL_REPIN=1 bazel mod tidy` to refresh the Bazel index.
"""

module(
    name = "rusty_photon",
    version = "0.1.0",
)

# --- Core Bazel rules ------------------------------------------------------

bazel_dep(name = "rules_rust", version = "0.70.0")
bazel_dep(name = "platforms", version = "1.0.0")

# BUILD/.bzl formatter + linter, vendored so every dev machine (and CI) runs the
# same pinned version with no system install: `bazel run //:buildifier` formats,
# `bazel test //:buildifier_check` verifies. `dev_dependency` because rusty_photon
# is always the root module ŌĆö this never needs to resolve for a downstream consumer.
bazel_dep(name = "buildifier_prebuilt", version = "8.5.1.2", dev_dependency = True)

# Two pinned patches to rules_rust, both serving spawned-service-binary coverage
# (the two halves of getting a BDD/integration child binary's src/ ŌĆö including
# src/main.rs ŌĆö into the report). See docs/plans/bazel-migration.md.
#
# 1. collect_coverage_extra_objects.patch ŌĆö BDD rust_tests spawn the service
#    binary as a child process; the collector merges the child's profraw but
#    `llvm-cov export` only emits coverage for functions in an -object on its
#    command line, and stock rules_rust passes ONLY the test binary. The patch
#    appends each spawned binary (RUST_COVERAGE_EXTRA_OBJECTS, set on the BDD
#    targets) as an extra -object so spawned-binary src/ coverage is EXPORTED.
#    Inert when the var is unset.
#
# 2. instrumented_files_include_data.patch ŌĆö adds `data` to the rust rules'
#    coverage `dependency_attributes`. llvm-cov (via patch 1) emits main.rs, but
#    bazel's lcov_merger then INTERSECTS that report with the test's
#    instrumented-files manifest, which is built only from `deps`/`crate`/`srcs`
#    ŌĆö so a spawned binary reached via `data` (its src/main.rs) is filtered back
#    out. Including `data` puts the instrumented service binary's sources in the
#    manifest so main.rs survives the merge. Without this, patch 1's exported
#    main.rs coverage is silently dropped.
#
# Upstream has no equivalent hooks (collect_coverage PRs #3490/#3808 unmerged;
# HEAD identical), so these are carried until upstreamed. The `bazel/cargo
# target parity` CI job guards that the patches still apply and are effective.
single_version_override(
    module_name = "rules_rust",
    patch_strip = 1,
    patches = [
        "//third_party/patches:collect_coverage_extra_objects.patch",
        "//third_party/patches:instrumented_files_include_data.patch",
    ],
)

# --- Rust toolchain --------------------------------------------------------

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    # Stable (the default channel, selected in .bazelrc) matches
    # workspace.package.rust-version. The pinned nightly is used ONLY by the
    # coverage workflow (.github/workflows/bazel-coverage.yml, via
    # `--config=coverage` which selects channel=nightly): the
    # #[cfg_attr(coverage_nightly, coverage(off))] attributes on every
    # `#[cfg(test)] mod tests` block require the nightly-only
    # `coverage_attribute` feature -- exactly like the Cargo coverage job
    # (.github/workflows/test.yml) which runs on nightly + cargo-llvm-cov.
    # The date is PINNED for remote-cache stability: a rolling nightly would
    # change every coverage action's cache key on each bump and bust the
    # coverage cache. Bump it if this nightly lacks the llvm-tools / rust-std /
    # rustc components for the host triple (`bazel coverage` needs llvm-cov +
    # llvm-profdata from the toolchain).
    versions = [
        "1.94.1",
        "nightly/2026-05-01",
    ],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

# --- crate_universe: resolve crates.io + git deps from Cargo files ---------

crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.from_cargo(
    name = "cr",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)

# aws-lc-sys vendors a large C library (aws-lc/) and compiles it via the
# `cc` crate.  Its C source uses deep relative #include paths (e.g.
# ../../../../third_party/jitterentropy/...) that resolve across multiple
# subdirectories.  The default build_script_data_glob does not materialise
# every vendored file in the runfiles tree, so those includes fail with
# "No such file or directory".  Glob everything.
crate.annotation(
    build_script_data_glob = ["**"],
    crate = "aws-lc-sys",
)
use_repo(crate, "cr")
