[package]
name = "filemonitor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "File monitoring service for Rusty Photon"

[dependencies]
ascom-alpaca = { git = "https://github.com/ivonnyssen/ascom-alpaca-rs.git", features = ["server", "safety_monitor"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
regex = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }
