[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.15.0", features = ["full"] }
thiserror = "1.0.30"
anyhow = "1.0.44"
serde = { version = "1.0.188", features = ["derive"] }
ascom-alpaca = {version ="1.0.0-beta.1",features = ["client", "all-devices"]}
futures = "0.3.28"
eyre = "0.6.8"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
