[package]
name = "rusty-photon-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6.2", features = ["web"] }
dioxus-web = "0.6.2"
log = "0.4"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"
dioxus-free-icons = { version = "0.9.0", features = ["bootstrap", "font-awesome-solid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
